[tool.poetry]
name = "repl-nix-projectinnovate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
stripe = "^10.10.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
psycopg2-binary = "^2.9.9"
werkzeug = "^3.0.4"
email-validator = "^2.2.0"
scikit-learn = "^1.5.1"
wtforms = "^3.1.2"
statsmodels = "^0.14.2"
prophet = "^1.1.5"
pandas = "^2.2.2"
numpy = "^2.1.1"
blinker = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
